# bevy_fxaa

./: Cargo.toml  README.md
assets/shaders/: fxaa.wgsl
src/: main.rs
